<resources>
    <string name="app_name">TestApp</string>
    <string name="hello_world">Hello world</string>
    <string name="ok">Ok</string>
    <string name="nextActivity">Next Activity</string>
    <string name="activityTwo">Activity Two</string>
    <string name="preactivity">Previous Activity</string>
    <string name="username">User Name</string>
    <string name="userage">User Age</string>
    <string name="send_email">Send E-mail</string>
    <string name="ac">AC</string>
    <string name="del">DEL</string>
    <string name="percentage">%</string>
    <string name="divide">/</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="nine">9</string>
    <string name="multiply">*</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="eight">8</string>
    <string name="substraction">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="addition">+</string>
    <string name="decimal">.</string>
    <string name="zero">0</string>
    <string name="Bracket">()</string>
    <string name="eqation">=</string>
    <string name="calculator">Calculator</string>
    <string name="relative_avtivity">Relative Avtivity</string>
    <string name="realativeBtn_2">Relative 2</string>
    <string name="go_to_rel">Go To Rel Activity</string>
    <string name="constraintLayout">Constraint Layout</string>
    <string name="goToCons">Go To Cons</string>
    <string name="email">E mail</string>
    <string name="password">Password</string>
    <string name="enteremail">Enter Email</string>
    <string name="enterpassword">Enter Password</string>
</resources>